fix z-index and opacity for header, line-heights for subtitle Contact blok

--- a/common.blocks/contact-page/css/stiles.css
+++ b/common.blocks/contact-page/css/stiles.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 .contact {
     height: 90vh;
     background-image: url(../img/background.webp) ;
@@ -11,7 +18,6 @@
 .contact__wrapper {
     width: 1170px;
     margin: 0 auto;
-    
 }
 
 .contact__title {
@@ -40,9 +46,15 @@
 }
 
 .contact__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     width: 100%;
 }
 
@@ -58,7 +70,6 @@
     margin-bottom: 15px;
     opacity: 0.5;
     color: #ffffff;
-
     font-size: 15px;
     font-weight: 700;
     font-style: normal;
@@ -99,6 +110,7 @@
     color: #ffffff;
     font-family: 'Raleway', sans-serif;
 }
+
 .form__input:-moz-placeholder, .form__texarea:-moz-placeholder {
     font-size: 15px;
     font-weight: 700;
@@ -108,10 +120,6 @@
     text-align: left;
     color: #ffffff;
     font-family: 'Raleway', sans-serif;
-}
-
-.address-block {
-    /* width: 500px; */
 }
 
 .address-block__group {
@@ -125,7 +133,6 @@
     font-style: normal;
     letter-spacing: normal;
     line-height: 25px;
-    
 }
 
 .address-block__dd {
