--- a/common.blocks/header/styles.css
+++ b/common.blocks/header/styles.css
@@ -1,8 +1,10 @@
 .header {
     height: 150px;
     position: fixed;
+    z-index: 1;
     top: 0;
     width: 100%;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .header:hover {
